fixed hero image not showing up

--- a/src/components/styles/hero.module.css
+++ b/src/components/styles/hero.module.css
@@ -21,7 +21,7 @@
     right: 0;
     width: 80%;
     height: 100%;
-    background-image: url("./images/microgamejam.jpg");
+    background-image: url("/images/microgamejam.jpg");
     opacity: 0.5;
     background-size: cover;
     background-position: center;
